# daktronics-singular-ui

./: Cargo.toml  LICENSE  README.md
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml  rust.yml
assets/: root_composition_script.js
src/: backend.rs  frontend.rs  main.rs  mock.rs
src/backend/: config.rs  mapping.rs  network.rs  profile.rs  serializer.rs  sports.rs  stream.rs
src/backend/stream/: latency_graph.rs
src/frontend/: configure.rs  graph.rs  header.rs  stream_running.rs  stream_start.rs  utils.rs  welcome.rs
