[package]
name = "daktronics-singular-ui"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
daktronics-allsport-5000 = { version = "^0.3.1", features = ["serde"] }
reqwest = { version = "^0.12.5", features = ["json"] }
serde = { version = "^1.0.204", features = ["derive"] }
serde_json = "^1.0.120"
timeago = "^0.4.2"
tokio = { version = "^1.38.0", features = ["full"] }
tokio-serial = "^5.4.4"
iced = { git = "https://github.com/iced-rs/iced.git", features = [
  "tokio",
  "debug",
  "lazy",
  "svg",
] }
# to force dependency resolution conflict to work
web-sys = "=0.3.67"
