[package]
name = "daktronics-singular-ui"
version = "2.1.4"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "^4.5.18", features = ["derive"] }
daktronics-allsport-5000 = { version = "^0.3.1", features = ["serde"] }
dark-light = "^1.1.1"
filenamify = "0.1.1"
image = { version = "^0.25.2", default-features = false, features = ["png"] }
open = "^5.3.0"
openssl = { version = "^0.10.66", features = ["vendored"] }
reqwest = { version = "^0.12.5", features = ["json"] }
rfd = "^0.14.1"
serde = { version = "^1.0.204", features = ["derive"] }
serde_json = "^1.0.120"
timeago = "^0.4.2"
tokio = { version = "^1.38.0", features = ["full"] }
tokio-serial = "^5.4.4"
iced = { version = "^0.13.1", features = ["tokio", "lazy", "svg", "canvas"] }
log = "0.4.25"
flexi_logger = "0.29.8"
